# clack

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
data/: com.github.cassidyjames.clack.appdata.xml  com.github.cassidyjames.clack.desktop
debian/: changelog  control  copyright
src/: clack.vala
